[gd_scene load_steps=4 format=3 uid="uid://2ffy5dpul43b"]

[ext_resource type="Script" path="res://Weapons/weapon.gd" id="1_lvke3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7de2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5suq0"]
size = Vector2(19.5, 20)

[node name="Weapon" type="CharacterBody2D"]
script = ExtResource("1_lvke3")
bullet_scene_path = "res://Weapons/bullet.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_w7de2")
disabled = true

[node name="ShootTimer" type="Timer" parent="."]

[node name="ReloadTimer" type="Timer" parent="."]

[node name="WeaponArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponArea"]
position = Vector2(0.25, 0)
shape = SubResource("RectangleShape2D_5suq0")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="area_entered" from="WeaponArea" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="WeaponArea" to="." method="_on_area_2d_area_exited"]
